# mecanica-tecnica

./: README.md  pyproject.toml
data/: forcas.xlsx
notebooks/: manipula_pdfs.ipynb  mecanica_exercicio_08.ipynb  momento_de_uma_forca_3d.ipynb
