[project]
name = "mecanica-tecnica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependencies>=7.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
]
